--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ Python/.ipynb_checkpoints/Inclined fusion pore-checkpoint.ipynb
 Python/.ipynb_checkpoints/FusionPoreExpanG-checkpoint.py
 Python/.ipynb_checkpoints/Inclined fusion pore-checkpoint.ipynb
 Python/.ipynb_checkpoints/Inclined fusion pore-checkpoint.ipynb
+Python/.ipynb_checkpoints/Inclined fusion pore-checkpoint.ipynb
+Python/.ipynb_checkpoints/BaseFusionPrePost-checkpoint.ipynb
